--- a/main.html
+++ b/main.html
@@ -8,6 +8,25 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <h1>Login Form</h1>
+  <form>
+    <div>
+      <input type="text" placeholder="Username" id="username" />
+    </div>
+
+    <div>
+      <input type="password" placeholder="Password" id="password" />
+    </div>
+
+    <div>
+      <input type="checkbox" id="checkbox" />
+      <label for="checkbox">Remember me.</label>
+    </div>
+
+    <input type="submit" id="submit" value="Submit" />
+  </form>
+
+	  <button id="existing" style="display: none;">Login as existing user</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
